--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite">
+
 
 
     <com.comapny.task1.customViews.CustomBottomNavigationView
@@ -19,6 +21,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
+
     <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -26,17 +29,18 @@
         android:layout_height="match_parent"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285"
         app:navGraph="@navigation/mobile_navigation" />
-
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="7dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/base_floating_button_shape"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,8 +50,8 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_centerHorizontal="true"
             android:id="@+id/base_fab"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:scaleType="fitXY"
             android:src="@drawable/ic_home_black_24dp" />
 
@@ -64,5 +68,16 @@
         </TextView>
 
     </RelativeLayout>
+
+    <Button
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
